--- a/Turbo_AzWithMVVM/Turbo_AzWithMVVM.csproj
+++ b/Turbo_AzWithMVVM/Turbo_AzWithMVVM.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -81,6 +82,7 @@
     <Compile Include="Domain\Abstractions\IRepository.cs" />
     <Compile Include="Domain\Abstractions\IUnitOfWork.cs" />
     <Compile Include="Domain\Entities\Car.cs" />
+    <Compile Include="Domain\Helper\ImageHelper.cs" />
     <Compile Include="Domain\ViewModels\BaseViewModel.cs" />
     <Compile Include="Domain\ViewModels\MainViewModel.cs" />
     <Compile Include="Domain\Views\MainWindow.xaml.cs">
